# InstrumentController

./: .gitignore  CMakeLists.txt  README.md  make.bat
circuits/: Motor_x27-166.kicad_mod
circuits/28byj_controller/: 28byj_controller.kicad_pcb  28byj_controller.kicad_pcb-bak  28byj_controller.kicad_pro  28byj_controller.kicad_sch  28byj_controller.sch-bak  _autosave-28byj_controller.sch
circuits/28byj_controller_proto/: 28byj_controller-B_Cu.gbr  28byj_controller-B_Mask.gbr  28byj_controller-B_Paste.gbr  28byj_controller-B_Silkscreen.gbr  28byj_controller-Edge_Cuts.gbr  28byj_controller-F_Cu.gbr  28byj_controller-F_Mask.gbr  28byj_controller-F_Paste.gbr  28byj_controller-F_Silkscreen.gbr  28byj_controller-NPTH-drl_map.gbr  28byj_controller-NPTH.drl  28byj_controller-PTH-drl_map.gbr  28byj_controller-PTH.drl  28byj_controller-job.gbrjob  28byj_controller.kicad_pcb  28byj_controller.kicad_prl  28byj_controller.kicad_pro  28byj_controller.kicad_sch  28byj_controller.sch  sym-lib-table
circuits/base_controller/: 3V3_Supply.kicad_sch  5V_Supply.kicad_sch  5V_Supply.sch-bak  ESP32.kicad_sch  Headers.kicad_sch  Headers.sch  Headers.sch-bak  USB_Programmer.kicad_sch  USB_Programmer.sch  USB_Programmer.sch-bak  _autosave-base_controller.sch  base_controller.kicad_pcb  base_controller.kicad_pcb-bak  base_controller.kicad_prl  base_controller.kicad_pro  base_controller.kicad_sch  fp-info-cache
circuits/base_controller_proto/: 3V3_Supply.kicad_prl  (+35 more)
device-src/: main.ino  seven-seg.hpp  topics.hpp  x27_driver.cpp
docs/: conf.py  index.rst
host-src/: CMakeLists.txt
(+71 files in other folders)
